--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="form-heading">
+            <h1>Add New Book to Library</h1>
+        </div>
+        <div class="books-heading">
+            <h1>Current Books In Library</h1>
+        </div>
+        <div class="form">
+            <p>Test Form Info</p>
+        </div>
+        <div class="books">
+        </div>
+    </div>
 </body>
 </html>
