--- a/index.html
+++ b/index.html
@@ -17,10 +17,23 @@
             <h1>Current Books In Library</h1>
         </div>
         <div class="form">
-            <p>Test Form Info</p>
+            <button class="add-book-button">Add New Book</button>
+            <div id="add-book-form" style="display:none">
+                <form id="add-book">
+                    <label for="Title">Title:</label>
+                    <input type="text" name="Title" id="Title">
+                    <label for="Author">Author:</label>
+                    <input type="text" name="Author" id="Author">
+                    <label for="Pages">Pages:</label>
+                    <input type="text" name="Pages" id="Pages">
+                    <label for="Read">Read:</label>
+                    <input type="text" name="Read" id="Read">
+                </form>
+                <button type="submit" class="submit-button">Submit To Library</button>
+                <button type="reset" class="reset-button">Reset Form</button>
+            </div>
         </div>
-        <div class="books">
-        </div>
+        <div class="books"></div>
     </div>
 </body>
 </html>
