Add function to toggle read status

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <input type="text" name="Author" id="Author">
                     <label for="Pages">Pages:</label>
                     <input type="text" name="Pages" id="Pages">
-                    <label for="Read">Read:</label>
-                    <input type="text" name="Read" id="Read">
+                    <select name="Read" id="Read">
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                    </select>
                 </form>
                 <button type="submit" class="submit-button">Submit To Library</button>
                 <button type="reset" class="reset-button">Reset Form</button>
