--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <input type="text" name="Author" id="Author">
                     <label for="Pages">Pages:</label>
                     <input type="text" name="Pages" id="Pages">
+                    <label for="Read">Read:</label>
                     <select name="Read" id="Read">
                         <option value="Yes">Yes</option>
                         <option value="No">No</option>
